...
                ),
          ),
          GoRoute(
            path: const RankingsRoute().location,
            builder:
                (context, state) => RankingsPage(
                  key: ValueKey('rankings-page'),
                  onOpenSettings: () => const SettingsRoute().go(context),
                  onOpenMovie:
                      (movieId) => MovieDetailRoute(movieId).go(context),
                ),
          ),
          GoRoute(
            path: const ActorsRoute().location,
            builder:
                (context, state) => ActorsPage(
                  key: const ValueKey('actors-page'),
                  onOpenActor:
                      (actorId) => ActorDetailRoute(actorId).go(context),
                ),
            routes: [
              GoRoute(
                path: ':actor_id',
...
                ),
          ),
          GoRoute(
            path: const SettingsRoute().location,
            builder:
                (context, state) => SettingsPage(
                  key: const ValueKey('settings-page'),
                  onOpenDiagnostics:
                      () => const SettingsDiagnosticsRoute().go(context),
                ),
            routes: [
              GoRoute(
                path: 'diagnostics',
...
